# renderer

./: .gitmodules  CMakeLists.txt  run.bat
renderer/: CMakeLists.txt
renderer/include/renderer/: pipeline.h  renderer_opengl.h  renderer_opengl_data.h
renderer/include/renderer/internal/: module.h
renderer/include/renderer/platform/: opengl_platform.h
renderer/include/renderer/platform/win32/: opengl_parameters.h
renderer/source/: renderer_opengl.c
renderer/source/platform/: renderer_opengl_win32.c
renderer_test/: CMakeLists.txt
renderer_test/include/: application.h
renderer_test/source/: application.cpp  main.cpp
